# entservices-connectivity

./: .gitignore  0001-Update-Calculator.cpp.patch  CHANGELOG.md  CMakeLists.txt  NOTICE  build_dependencies.sh  cov_build.sh  my_patch.patch  services.cmake
.github/: CODEOWNERS  copilot-instructions.md
.github/instructions/: Plugin.instructions.md  PluginOnboardingCompliance.instructions.md  Plugincmake.instructions.md  Pluginconfig.instructions.md  Pluginimplementation.instructions.md  Pluginlifecycle.instructions.md  Pluginmodule.instructions.md
.github/workflows/: L1-tests.yml  json_validator.yml  native_full_build.yml
BartonMatter/: API_Flow_Diagram.md  BartonClusterDelegates.cpp  BartonClusterDelegates.h  BartonMatter.conf.in  BartonMatter.config  BartonMatterImplementation.cpp  BartonMatterImplementation.h  BartonMatterPlugin.cpp  BartonMatterPlugin.h  BartonMatter_Design_And_Flow.md  CMakeLists.txt  DELEGATES_ACL_BINDINGS.md  EVENTS.md  MatterClusterDelegateManager.h  MatterClusterDelegates.cpp  MatterClusterDelegates.h  Module.h  NetworkCommissioningBridge.cpp  NetworkCommissioningBridge.h  NetworkCommissioningDriver.cpp  NetworkCommissioningDriver.h  README.md
BartonMatter/docs/: ACL-and-Binding-Flow.md  Architecture-Overview.md  BartonMatter-API-Reference.md  Cluster-Delegates-Guide.md  Public-API-Reference.md
Bluetooth/: Bluetooth.cpp  Bluetooth.h  BluetoothDeviceManager.cpp  BluetoothDeviceManager.h  CHANGELOG.md  CMakeLists.txt  Module.h  README.md
Calculator/: CHANGELOG.md  CMakeLists.txt  Calc.conf.in  Calc.config  Calc.cpp  Calc.h  Calculator.conf.in  Calculator.config  Calculator.cpp  Calculator.h  Module.cpp  Module.h  README.md
Calculator/src/: add.cpp  division.cpp  mod.cpp  mul.cpp  sub.cpp
GStreamer/: CMakeLists.txt  GStreamer.conf.in  GStreamer.config  GStreamer.cpp  GStreamer.h  Module.cpp  Module.h  ReadMe.txt  TESTING_COMMANDS.md
Tests/L1Tests/: CMakeLists.txt
Tests/L1Tests/tests/: test_Bluetooth.cpp
build_test/: CMakeCache.txt
docs/: BartonMatter-API-Reference.md
helpers/: PluginInterfaceBuilder.h  UtilsController.h
